--- a/org/index.org
+++ b/org/index.org
@@ -1,5 +1,5 @@
 #+title: ecology.ghislainv.fr -- About
-#+description: ecology.ghislainv.fr: ecology and applied statistics
+#+description: ecology.ghislainv.fr: forest ecology and statistics
 #+setupfile: setup.org
 
 #+ATTR_HTML: :id banner :alt banner
@@ -7,30 +7,22 @@
 
 * About
 
-*Objectives*: community ecology, population dynamics and conservation
-biology.
+#+attr_html: :id ID_picture
+[[file:images/identity/gv_id_gnupg.jpg]]
 
-*Tools*: statistics (tests, factorial analysis, maximum likelihood,
-Bayesian inference) and informatics (R, GRASS GIS, Python, Java, C++,
-Bash).
+👋 Hi, my name is Ghislain Vieilledent. I am an ecologist at [[https://www.cirad.fr][Cirad]], a French research center working with developing countries to tackle environmental and development issues. I am a member of the [[https://amap.cirad.fr][UMR AMAP]] joint research unit based in [[https://en.wikipedia.org/wiki/Montpellier][Montpellier]] (South of France). My [[file:research.html][research]] focuses mainly on [[https://en.wikipedia.org/wiki/Tropical_forest][tropical forests]]. More particularly, I try to understand better the role of tropical forests in the global [[https://en.wikipedia.org/wiki/Carbon_cycle][carbon cycle]] and the impact of [[https://en.wikipedia.org/wiki/Climate_change][climate change]] and [[https://en.wikipedia.org/wiki/Deforestation][land-use change]] on tropical forest [[https://en.wikipedia.org/wiki/Biodiversity][biodiversity]]. I publish scientific [[file:publications.html][papers]] in [[https://en.wikipedia.org/wiki/Community_(ecology)][community ecology]], [[https://en.wikipedia.org/wiki/Conservation_biology][conservation biology]], and [[https://en.wikipedia.org/wiki/Statistics#Applications][applied statistics]]. For my research, I analyse data that were collected in the tropics. I also develop theoretical models to test new hypothesis in ecology. I use various statistical and computer tools to do so (including [[https://www.r-project.org/][R]] and [[https://www.python.org/][Python]]). My field work takes place mainly in Madagascar (where I have lived for three years), French Guiana, and New Caledonia. I spend most of my time writing [[file:software.html][code]] and [[file:publications.html][papers]], and supervising [[file:people.html][students]]. Major part of my research is done in collaboration with my [[file:people.html][students or fellow researchers]]. This website aims at presenting a broad view of these research activities.
 
-*Institute*:
+*** Contact
 
-#+begin_export html
-<a href="https://www.cirad.fr/en/"><img alt="RF" src="images/logos/Logo_RF.jpg" height="90"></a>
-<a href="https://www.cirad.fr/en/"><img alt="Cirad" src="images/logos/logo-Cirad.png" height="70"></a>
-<a href="https://amap.cirad.fr"><img alt="AMAP" src="images/logos/Logo_AMAP.jpg" height="70"></a>
-#+end_export
+Cirad, [[https://amap.cirad.fr/][UMR AMAP]], F-34398 Montpellier, FRANCE\\
+ghislain.vieilledent(at)cirad.fr\\
+You can also find me on @@html:<a target="_blank" rel="noopener" class="nav-link" href="https://github.com/ghislainv">GitHub <i class="fa-brands fa-github"></i></a> and <a target="_blank" rel="noopener" class="nav-link" href="https://ecoevo.social/@ghislainv">Mastodon <i class="fa-brands fa-mastodon"></i></a>@@.
 
-# #+ATTR_HTML: :alt RF :height 90
-# [[https://www.cirad.fr/en/][file:images/logos/Logo_RF.jpg]]
-# #+ATTR_HTML: :alt Cirad :height 70
-# [[https://www.cirad.fr/en/][file:images/logos/logo-Cirad.png]]
-# #+ATTR_HTML: :alt AMAP :height 70
-# [[https://amap.cirad.fr][file:images/logos/Logo_AMAP.jpg]]
-
-*Cirad*, [[https://amap.cirad.fr/][UMR AMAP]], F-34398 Montpellier, FRANCE
-
-ghislain.vieilledent(at)cirad.fr
+#+ATTR_HTML: :alt RF :height 90 :style float:left;
+[[https://www.cirad.fr/en/][file:images/logos/Logo_RF.jpg]]
+#+ATTR_HTML: :alt Cirad :height 70 :style float:left;
+[[https://www.cirad.fr/en/][file:images/logos/logo-Cirad.png]]
+#+ATTR_HTML: :alt AMAP :height 70
+[[https://amap.cirad.fr][file:images/logos/Logo_AMAP.jpg]]
 
 # End
