--- a/org/software.org
+++ b/org/software.org
@@ -10,7 +10,7 @@
 :CUSTOM_ID: software
 :END:
 
-@@html:<h4 id=title-software>Software ToC</h4@@
+@@html:<h4 id=title-toc>Software ToC</h4@@
 #+TOC: headlines 2 :target #software
 
 ** R packages
