--- a/org/people.org
+++ b/org/people.org
@@ -2,19 +2,81 @@
 #+description: People at ecology.ghislainv.fr
 #+setupfile: setup.org
 
-#+ATTR_HTML: :id banner :alt banner
-[[file:images/banner.jpg]]
-
 * People
+:PROPERTIES:
+:CUSTOM_ID: people
+:END:
 
-Page under construction.
+@@html:<h4 id=title-toc>People ToC</h4@@
+#+TOC: headlines 1 :target #people
 
 ** Students
 
 *** PhD students
 
+**** Co-supervisions
+
+*Jeanne Clément*, planned in 2023, Co-supervisor: Pierre Couteron, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Prédire la vulnérabilité des espèces d'arbres au changement climatique en forêt Guyanaise via l'utilisation de modèles joints de distribution des espèces/, Following the PhD thesis: PhD thesis in progress.
+
+*Camille Girard-Tercieux*, 2022, Co-supervisors: Raphaël Pélissier and Isabelle Maréchaux, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Rôle de la variabilité intra-spécifique dans la coexistence des espèces en forêt tropicale/, Following the PhD thesis: Currently unemployed.
+
+*Mario M. Tagliari*, 2021, Co-supervisor: Nivaldo Peroni, Université Fédérale de Santa Catarina (UFSC), Florianopolis, Brésil, PhD in ecology, Ecologia geral, etnoecologia e conservação, /Distribuição futura da Araucaria angustifolia: aspectos etnoecológicos e populacionais na dinâmica espaço-temporal na paisagem cultural da Floresta Ombrófila Mista/, Following the PhD thesis: Professor na Faculdade Municipal de Meio Ambiente (FAMA), Clevelândia, Paraná, Brésil.
+
+*Clovis Grinand*, 2016, Co-supervisor: Martial Bernoux, Montpellier SupAgro, Ecole doctorale GAIA, Thèse de doctorat, filière EFSA (Écologie Fonctionnelle et Sciences Agronomiques), /Suivi et modélisation des changements d'usage des terres et stocks de carbone dans les sols et les arbres dans le cadre de la REDD+ à Madagascar -- Vers des mesures pertinentes localement et cohérentes à large échelle/, Following the PhD thesis: Researcher at Nitidae, creator of Nitidae Lab'.
+
+**** Collaborations
+
+*Dimitri Justeau-Allaire*, 2020, Supervisors: Philippe Birnbaum and Xavier Lorca, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Planification systématique de la conservation basée sur les contraintes, une approche générique et expressive -- Application à l'aide à la décision pour la conservation des forêts de Nouvelle-Calédonie/, Following the PhD thesis: Researcher at IRD, UMR AMAP.
+
+*Camille Dezécache*, 2017, Supervisors: Bruno Hérault, Jean-Michel Salles, Université de Guyane, Ecole doctorale Diversités, santé et développement en Amazonie, Thèse de doctorat, Diversités, santé et développement en Amazonie, /Les fondements de REDD+ à l'épreuve des modèles de déforestation: cas d'étude sur le Plateau des Guyanes/, Following the PhD thesis: Researcher at IFREMER and market gardener.
+
+*Nicolas Labrière*, 2015, Supervisors: Yves Laumonier and Bruno Locatelli, AgroParisTech, Ecole doctorale ABIES, Thèse de doctorat, Sciences de l'environnement, /Services écosystémiques et biodiversité dans les paysages forestiers du nord de Bornéo/, Following the PhD thesis: Post-doctoral researcher, Unité EDB, University of Paul Sabatier, Toulouse, France.
+
 *** Master students
+
+*Pierre Guillaumont*, 2022, M2, Université de Montpellier, Statistique et Science des Données. Parcours Management de l'Information et de la Décision, /Classification des communautés d'arbres en Nouvelle-Calédonie à l'aide de modèle joint de distribution des espèces et développement du package “gecevar” pour l'obtention de variables climatiques et environnementales/, Following the internship: Developer, UMR AMAP, Montpellier, France.
+
+*Corentin Knoploch*, 2019, M2, Co-supervisor: Clovis Grinand, Université Aix-Marseille, Biodiversité, Ecologie et Evolution (BEE), /The importance of deforestation and climate change in shaping lemurs' distributions and identifying their areas of climatic refuges/, Following the internship: VSC, UMR Ecofog, Kourou, Guyane française.
+
+*Jeanne Clément*, 2019, M2, Université de Montpellier, Mathématiques et biostatistique, /Développement d'un modèle joint de distribution des espèces pour la réalisation d'une carte de biodiversité à Madagascar/, Following the internship: PhD thesis, UMR AMAP, Montpellier, France.
+
+*Camille Girard-Tercieux*, 2019, M2, Co-supervisor: Raphaël Pélissier, Isabelle Maréchaux, INP-ENSAT, Université Paul Sabatier Toulouse 3, Master EA (Écosystèmes et Anthropisation), /Influence of intraspecific variability on the coexistence of tree species in a tropical forest/, Following the internship: PhD thesis, UMR AMAP, Montpellier, France.
+
+*Aurélien Colas*, 2018, M2, INSA Lyon, Biosciences 4BIM, /Création d'un atlas de la biodiversité à Madagascar/, Following the internship: Developer full stack at Solutec, Lyon, France.
+
+*Mario M. Tagliari*, 2015, M2, Université de Montpellier, Master Écologie et Biodiversité, Biodiversité Végétale Tropicale (BVT), /Biogéographie des espèces de Baobabs à Madagascar: modélisation de l'aire de distribution des espèces et de leur vulnérabilité au changement climatique/, Following the internship: PhD thesis, Université fédérale de Santa Catarina, Florianopolis, Brésil.
+
+*Margaux Charra*, 2015, M2, Université Paris Sud, E.B.E. Préservation et Gestion Conservatoire des écosystèmes., /Création d'une base de données et modélisation de la biodiversité à Madagascar/, Following the internship: Data analyst, CNES, Toulouse, France.
+
+*Anaïs Chalant*, 2013, M2, Co-supervisor: Grégoire Vincent, Agrocampus Ouest, Rennes, Statistique appliquée, /Intérêt des modèles hiérarchiques pour l'estimation de la démographie des espèces rares en forêt tropicale/, Following the internship: Data scientist, Air Liquide, Paris, France.
+
+*Nivohary Ramaroson*, 2011, M2, Université d'Antananarivo et Université de la Réunion, Télédétection et risques naturels, /Analyse historique de la déforestation par télédétection et modélisation de la déforestation à Madagascar: cas du corridor Ankeniheny-Zahamena (CAZ)/, Following the internship: Country programme analyst, IFAD, Antananarivo, Madagascar.
+
+*Samuelson Andriamanohisoa*, 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site de Fandriana-Marolambo/, Following the internship: Engineer at Madacompost, Antananarivo, Madagascar.
+
+*Zafyson Randrianasolo*, 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site d'Ivohibe/, Following the internship: Consultant in environnement and rural development, Antananarivo, Madagascar.
+
+*Sarobidy Rakotonarivo*, 2010, DEA, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, DEA Foresterie, Développement, Environnement, /Développement de modèles allométriques de biomasse. Cas de la région de Taolagnaro/, Following the internship: Researcher at ESSA-forêts, University of Antananarivo, Madagascar.
+
+*Hasina Razafindrabe*, 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site de Bealanana/, Following the internship: Engineer at Nalco Water, Antananarivo, Madagascar.
+
+*Cindy Gidoin*, 2010, M2, Co-supervisor: Sylvie Gourlet-Fleury, Université Montpellier 2 Sciences et techniques, Fonctionnement des écosystèmes aquatiques et terrestres, naturels et anthropisés, /Effets de la composition spécifique, de l'intensité des perturbations et des conditions environnementales sur l'accroissement en biomasse aérienne en forêt tropicale humide/, Following the internship: Post-doctoral researcher, University of Zurich, Switzerland.
 
 ** Post-docs
 
+**** Co-supervisions
+
+*Benjamin Deneu*, planned in 2023, Co-supervisors: Pierre Bonnet and Alexis Joly, INRIA, /Comparing convolutional neural network (CNN) and joint species distribution models (JSDM) for modelling ecological communities/, Current position: Post-doc in progress.
+
+*Salman Khan*, planned in 2023, Co-supervisors: Vincent Freycon and Isabelle Maréchaux, CNRS, UMR AMAP, /Improving the estimate of plant available water accounting for soil characteristics in tropical forests of French Guiana/, Current position: Post-doc in progress.
+
+**** Collaborations 
+
+*Grégoire Blanchard*, planned in 2023, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /Using remote sensing data to characterize edge effects in New-Caledonian forests/, Current position: Post-doc in progress.
+
+*Dimitri Justeau-Allaire*, 2021, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /New tools to generate fragmented landscapes and compute landscape connectivity/, Current position: Researcher at IRD, UMR AMAP.
+
+
 ** Collaborators
+
+A list of my collaborators is available on [[https://scholar.google.fr/citations?user=fv71B7UAAAAJ&hl=fr][Google Scholar]].
