--- a/org/people.org
+++ b/org/people.org
@@ -10,6 +10,16 @@
 @@html:<h4 id=title-toc>People ToC</h4@@
 #+TOC: headlines 1 :target #people
 
+** Post-docs
+
+*Benjamin Deneu*, planned in 2023, Co-supervisors: Pierre Bonnet and Alexis Joly, INRIA, /Comparing convolutional neural network (CNN) and joint species distribution models (JSDM) for modelling ecological communities/, Current position: Post-doc in progress.
+
+*Salman Khan*, planned in 2023, Co-supervisors: Vincent Freycon and Isabelle Maréchaux, CNRS, UMR AMAP, /Improving the estimate of plant available water accounting for soil characteristics in tropical forests of French Guiana/, Current position: Post-doc in progress.
+
+*Grégoire Blanchard* (collaboration), planned in 2023, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /Using remote sensing data to characterize edge effects in New-Caledonian forests/, Current position: Post-doc in progress.
+
+*Dimitri Justeau-Allaire* (collaboration), 2021, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /New tools to generate fragmented landscapes and compute landscape connectivity/, Current position: Researcher at IRD, UMR AMAP.
+
 ** Students
 
 *** PhD students
@@ -38,7 +48,7 @@
 
 *Camille Girard-Tercieux*, 2019, M2, Co-supervisor: Raphaël Pélissier, Isabelle Maréchaux, INP-ENSAT, Université Paul Sabatier Toulouse 3, Master EA (Écosystèmes et Anthropisation), /Influence of intraspecific variability on the coexistence of tree species in a tropical forest/, Following the internship: PhD thesis, UMR AMAP, Montpellier, France.
 
-*Aurélien Colas*, 2018, M2, INSA Lyon, Biosciences 4BIM, /Création d'un atlas de la biodiversité à Madagascar/, Following the internship: Developer full stack at Solutec, Lyon, France.
+*Aurélien Colas*, 2018, M2, Co-supervisor: Clovis Grinand, INSA Lyon, Biosciences 4BIM, /Création d'un atlas de la biodiversité à Madagascar/, Following the internship: Developer full stack at Solutec, Lyon, France.
 
 *Mario M. Tagliari*, 2015, M2, Université de Montpellier, Master Écologie et Biodiversité, Biodiversité Végétale Tropicale (BVT), /Biogéographie des espèces de Baobabs à Madagascar: modélisation de l'aire de distribution des espèces et de leur vulnérabilité au changement climatique/, Following the internship: PhD thesis, Université fédérale de Santa Catarina, Florianopolis, Brésil.
 
@@ -57,17 +67,6 @@
 *Hasina Razafindrabe*, 2010, M2, Co-supervisor: Romuald Vaudry, ESSA-forêts, Université d'Antananarivo, Ingénieur agronome, spécialisation eaux et forêts, /Développement de modèles allométriques de biomasse. Cas du site de Bealanana/, Following the internship: Engineer at Nalco Water, Antananarivo, Madagascar.
 
 *Cindy Gidoin*, 2010, M2, Co-supervisor: Sylvie Gourlet-Fleury, Université Montpellier 2 Sciences et techniques, Fonctionnement des écosystèmes aquatiques et terrestres, naturels et anthropisés, /Effets de la composition spécifique, de l'intensité des perturbations et des conditions environnementales sur l'accroissement en biomasse aérienne en forêt tropicale humide/, Following the internship: Post-doctoral researcher, University of Zurich, Switzerland.
-
-** Post-docs
-
-*Benjamin Deneu*, planned in 2023, Co-supervisors: Pierre Bonnet and Alexis Joly, INRIA, /Comparing convolutional neural network (CNN) and joint species distribution models (JSDM) for modelling ecological communities/, Current position: Post-doc in progress.
-
-*Salman Khan*, planned in 2023, Co-supervisors: Vincent Freycon and Isabelle Maréchaux, CNRS, UMR AMAP, /Improving the estimate of plant available water accounting for soil characteristics in tropical forests of French Guiana/, Current position: Post-doc in progress.
-
-*Grégoire Blanchard* (collaboration), planned in 2023, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /Using remote sensing data to characterize edge effects in New-Caledonian forests/, Current position: Post-doc in progress.
-
-*Dimitri Justeau-Allaire* (collaboration), 2021, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /New tools to generate fragmented landscapes and compute landscape connectivity/, Current position: Researcher at IRD, UMR AMAP.
-
 
 ** Collaborators
 
