--- a/org/people.org
+++ b/org/people.org
@@ -32,7 +32,7 @@
 
 *Dimitri Justeau-Allaire* (collaboration), 2020, Supervisors: Philippe Birnbaum and Xavier Lorca, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Planification systématique de la conservation basée sur les contraintes, une approche générique et expressive -- Application à l'aide à la décision pour la conservation des forêts de Nouvelle-Calédonie/, Following the PhD thesis: Researcher at IRD, UMR AMAP.
 
-*Camille Dezécache*, 2017 (collaboration), Supervisors: Bruno Hérault, Jean-Michel Salles, Université de Guyane, Ecole doctorale Diversités, santé et développement en Amazonie, Thèse de doctorat, Diversités, santé et développement en Amazonie, /Les fondements de REDD+ à l'épreuve des modèles de déforestation: cas d'étude sur le Plateau des Guyanes/, Following the PhD thesis: Researcher at IFREMER and market gardener.
+*Camille Dezécache*, (collaboration) 2017, Supervisors: Bruno Hérault, Jean-Michel Salles, Université de Guyane, Ecole doctorale Diversités, santé et développement en Amazonie, Thèse de doctorat, Diversités, santé et développement en Amazonie, /Les fondements de REDD+ à l'épreuve des modèles de déforestation: cas d'étude sur le Plateau des Guyanes/, Following the PhD thesis: Researcher at IFREMER and market gardener.
 
 *Clovis Grinand*, 2016, Co-supervisor: Martial Bernoux, Montpellier SupAgro, Ecole doctorale GAIA, Thèse de doctorat, filière EFSA (Écologie Fonctionnelle et Sciences Agronomiques), /Suivi et modélisation des changements d'usage des terres et stocks de carbone dans les sols et les arbres dans le cadre de la REDD+ à Madagascar -- Vers des mesures pertinentes localement et cohérentes à large échelle/, Following the PhD thesis: Researcher at Nitidae, creator of Nitidae Lab'.
 
