--- a/org/pages/404.org
+++ b/org/pages/404.org
@@ -2,4 +2,4 @@ Sorry, we can't find that page that you're looking for. You can try
 again by going [[./index.html][back to the homepage]].
 
 #+html_attr: :width 400 :alt "image404"
-[[file:https:/octodex.github.com/images/constructocat2.jpg]]
+[[file:https://octodex.github.com/images/constructocat2.jpg]]
