--- a/org/blog/news.org
+++ b/org/blog/news.org
@@ -1,16 +1,44 @@
 #+title: ecology.ghislainv.fr -- News
 #+description: Ghislain Vieilledent -- Forest ecology and statistics
+#+author: Ghislain Vieilledent
+#+email: ghislain.vieilledent@cirad.fr
 #+setupfile: setup.org
-#+html_head_extra: <link type='application/rss+xml' href='https://ecology.ghislainv.fr/news.xml' title='RSS feed for ecology.ghislainv.fr'>
+#+html_head_extra: <link type="application/rss+xml" href="https://ecology.ghislainv.fr/news.xml" title="RSS feed for ecology.ghislainv.fr">
 
 @@html:<h1>News</h1>@@
 
-*** Story on Madagascar's baobabs
+* Story on Madagascar's baobabs                                       :media:
 :PROPERTIES:
-:ID:       2293c1e4-0b53-4be6-85b9-973dbb84d569
-:PUBDATE:  2023-02-08 mer. 17:43
+:ID:       0572c2dd-788a-4020-a31c-6fb24469f718
+:PUBDATE:  2023-02-09 jeu. 10:08
 :END:
 
 *Feb. 8, 2023*\\
 Our [[https://doi.org/10.1111/gcb.15859][article]] about the vulnerability of Madagascar's baobabs to climate change has been cited in a [[https://www.nationalgeographic.com/environment/article/madagascar-baobab-trees-deforestation-climate-change][story]] on the National Geographic website.
 
+* Camille Girard-Tercieux PhD defense                              :students:
+:PROPERTIES:
+:ID:       1d3b8bff-ef58-4361-9b77-6ba7d2a407dd
+:PUBDATE:  2023-02-09 jeu. 10:07
+:END:
+
+*Dec. 16, 2022*\\
+Congratulations to Camille who has brilliantly defended her PhD thesis at the University of Montpellier. Thanks to Aude Valade, Sean McMahon, and Björn Reineking for having accepted to be part of the jury. 
+
+* Mission to New Caledonia                                            :fieldwork:
+:PROPERTIES:
+:ID:       dbed4f6d-7780-42a1-9554-3f297a8c9860
+:PUBDATE:  2023-02-09 jeu. 10:06
+:END:
+
+*Oct. 11, 2022 -- Nov. 28, 2022*\\
+Mission to New-Caledonia for the end of the RELIQUES project funded by CNRT. The mission included some field work with the remeasurement of a 1-ha forest plot in the South of the island.
+
+* INTRACO workshop at Cesab                                       :workshops:
+:PROPERTIES:
+:ID:       0f2fd6a2-567f-4a86-8b8c-663149c36291
+:PUBDATE:  2023-02-09 jeu. 10:05
+:END:
+
+*Sep. 19-23, 2022*\\
+INTRACO workshop at Cesab in Montpellier. We spent the week analysing forest inventory data from boreal, temperate, and tropical regions.
