--- a/org/blog/setup.org
+++ b/org/blog/setup.org
@@ -1,5 +1,5 @@
 #+language:    en
-#+options:     author:nil H:6 num:nil title:nil toc:nil ^:{} ':t *:t
+#+options:     author:t email:t H:6 num:nil title:nil toc:nil ^:{} ':t *:t
 #+property:    header-args :eval no-export
 #+export_select_tags: export
 #+export_exclude_tags: noexport
