--- a/org/pages/publications.org
+++ b/org/pages/publications.org
@@ -45,7 +45,9 @@
 
 **Fischer F. J., J. Chave, A. Zanne, T. Jucker, A. Fajardo, G. Vieilledent, R. A. Ferreira de Lima, [...], and A. Sellin.** A global map of wood density. /Nature Plant/.
 
-**Bourgoin C., Ceccherini G., Girardello M., Vancutsem C., Avitabile V., Beck P.S.A, Beuchle R., Blanc L., Duveiller G., Migliavacca M., Vieilledent G., 8, Cescatti A., Achard F.** Recovery of tropical moist forests after degradation and deforestation. /Nature/.
+**Bourgoin C., G. Ceccherini, M. Girardello, C. Vancutsem, V. Avitabile, P.S.A. Beck, R. Beuchle, L. Blanc, G. Duveiller, M. Migliavacca, G. Vieilledent,A. Cescatti, F. Achard.** Recovery of tropical moist forests after degradation and deforestation. /Nature/.
+
+**Boisseaux M., D. Krebber, B. Burban, A. Casado-Garcia, J. Cazal1, J. Clément, G. Derroire, C. Fortunel, J.-Y. Goret, J. Heras, G. Jaouen, C. Scoffoni, G. Vieilledent, J. Vleminckx, S. Coste, H. Schimann, C. Stahl.** Local habitat cannot be explained by leaf chemical and water-related traits in neotropical trees. /Functional Ecology/.
 
 *** Preprints
 
