--- a/org/pages/people.org
+++ b/org/pages/people.org
@@ -10,6 +10,10 @@
 @@html:<h4 id=title-toc>People ToC</h4@@
 #+TOC: headlines 1 :target #people
 
+** Principal investigator
+
+[[file:ghislainv.org][*Ghislain Vieilledent*]], Cirad UMR AMAP, research scientist, /tropical forest ecology/.
+
 ** Post-docs
 
 *Benjamin Deneu*, planned in 2023, Co-supervisors: Pierre Bonnet and Alexis Joly, INRIA, /Comparing convolutional neural network (CNN) and joint species distribution models (JSDM) for modelling ecological communities/, Current position: Post-doc in progress.
@@ -20,9 +24,7 @@
 
 *Dimitri Justeau-Allaire* (collaboration), 2021, Supervisor: Philippe Birnbaum, Institut Agronomique Calédonien, /New tools to generate fragmented landscapes and compute landscape connectivity/, Current position: Researcher at IRD, UMR AMAP.
 
-** Students
-
-*** PhD students
+** PhD students
 
 *Jeanne Clément*, planned in 2023, Co-supervisor: Pierre Couteron, Université de Montpellier, Ecole doctorale GAIA, Thèse de doctorat, filière EERGP (Ecologie, Evolution, Ressources Génétiques, Paléontologie), /Prédire la vulnérabilité des espèces d'arbres au changement climatique en forêt Guyanaise via l'utilisation de modèles joints de distribution des espèces/, Following the PhD thesis: PhD thesis in progress.
 
@@ -38,7 +40,7 @@
 
 *Nicolas Labrière* (collaboration), 2015, Supervisors: Yves Laumonier and Bruno Locatelli, AgroParisTech, Ecole doctorale ABIES, Thèse de doctorat, Sciences de l'environnement, /Services écosystémiques et biodiversité dans les paysages forestiers du nord de Bornéo/, Following the PhD thesis: Post-doctoral researcher, Unité EDB, University of Paul Sabatier, Toulouse, France.
 
-*** Master students
+** Master students
 
 *Pierre Guillaumont*, 2022, M2, Université de Montpellier, Statistique et Science des Données. Parcours Management de l'Information et de la Décision, /Classification des communautés d'arbres en Nouvelle-Calédonie à l'aide de modèle joint de distribution des espèces et développement du package “gecevar” pour l'obtention de variables climatiques et environnementales/, Following the internship: Developer, UMR AMAP, Montpellier, France.
 
