--- a/org/blog/news.org
+++ b/org/blog/news.org
@@ -3,11 +3,11 @@
 #+author: Ghislain Vieilledent
 #+email: ghislain.vieilledent@cirad.fr
 #+setupfile: setup.org
-#+html_head_extra: <link rel="alternative" type="application/rss+xml" href="https://ecology.ghislainv.fr/news.xml" title="RSS feed for ecology.ghislainv.fr">
+#+html_head_extra: <link rel="alternate" type="application/rss+xml" href="https://ecology.ghislainv.fr/news.xml" title="RSS feed for ecology.ghislainv.fr">
 
 @@html:<h1>News</h1>@@
 
-* Institutional video portrait by Cirad
+* Video portrait by Cirad
 :PROPERTIES:
 :ID:       9bcf9999-3dd7-4988-8bd9-d1e3bb688ec0
 :PUBDATE:  2023-02-20 lun. 11:55
