--- a/org/pages/index.org
+++ b/org/pages/index.org
@@ -23,7 +23,7 @@
 ** Contact
 
 Cirad, [[https://amap.cirad.fr/][UMR AMAP]], F-34398 Montpellier, FRANCE\\
-ghislain@@html:<!-- mzkc@peo -->@@.vieilledentAA@@html:<!-- alp@mtu -->@@cirad.fr (replace AA with @)\\
+[[mailto:ghislain.vieilledent@cirad.fr][ghislain.vieilledent@cirad.fr]]\\
 You can also find me on @@html:<a target="_blank" rel="noopener" class="nav-link" href="https://github.com/ghislainv">GitHub <i class="fa-brands fa-github"></i></a> and <a target="_blank" rel="noopener" class="nav-link" href="https://ecoevo.social/@ghislainv">Mastodon <i class="fa-brands fa-mastodon"></i></a>@@.
 
 #+attr_html: :alt RF :height 90 :style float:left;
